Feature #1871. Creates a new service in the comment component aimed to notify interested users about an action on a comment (comment add or removal). This service is created from the existing one for the classifieds component with a more generic behaviour: any silverpeas component interested to provide a such functionality has just to register itself to the new service

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -27,7 +27,7 @@ author = Herausgeber
 c_comment = Kommentar
 created = Erstellt
 modified = Ge\u00e4ndert
-modify = \u00C4ndern
+modify = \u00c4ndern
 delete = L\u00f6schen
 suppressionConfirmation = Sind Sie sicher, folgendes l\u00f6schen zu wollen:
 type = Typ
@@ -80,3 +80,5 @@ comment.AC_NoDeletePath = Ein Kontext kann nicht gel\u00f6scht werden
 comment.AC_NoDeleteOnServer = die Dateien k\u00f6nnen nicht vom Server gel\u00f6scht werden
 comment.AC_NoCreateIndex = die Datei wird von der Suchmaschine nicht indexiert
 comment.AC_NoDeleteIndex = die Datei wird von der Suchmaschine immer indexiert
+
+comments.commentAddingSubject = Ein Kommentar wurde hinzugef\u00fcgt
