--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_fr.properties
@@ -22,10 +22,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 comment.add = Ajouter un commentaire
-comment.suppressionConfirmation = Etes vous sûr(e) de vouloir supprimer le commentaire ?
+comment.suppressionConfirmation = Etes vous s\u00fbr(e) de vouloir supprimer le commentaire ?
 comment.comment = Commentaire
 comment.pleaseFill_single = Vous devez remplir tous les champs obligatoires.
-comment.champsTropLong = Le commentaire est limité à 2000 caractères
+comment.champsTropLong = Le commentaire est limit\u00e9 \u00e0 2000 caract\u00e8res
 
 comment.DAO_NoClosedStatment = Impossible to close the " Statement "
 comment.EJB_NoClosedConnection = Impossible to close the connection to data base
@@ -43,3 +43,5 @@ comment.AC_NoDeletePath = Impossible to delete a context
 comment.AC_NoDeleteOnServer = the files will not be to remove server
 comment.AC_NoCreateIndex = the file will not be indexed by the search engine
 comment.AC_NoDeleteIndex = the file will be always indexed by the search engine
+
+comments.commentAddingSubject = Un commentaire a \u00e9t\u00e9 ajout\u00e9
