--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_en.properties
@@ -26,3 +26,5 @@ comment.suppressionConfirmation = Are you sure you want to delete this comment?
 comment.comment = Comment
 comment.pleaseFill_single = You must filled all mandatory fields.
 comment.champsTropLong = A comment is limited to 2000 characters.
+
+comments.commentAddingSubject = A comment has been added
