--- a/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/multilang/classifiedsBundle_en.properties
+++ b/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/multilang/classifiedsBundle_en.properties
@@ -21,9 +21,4 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Properties of comment
-# -------------------------
-AdminAllowedToUpdate = true
-
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/
-customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/
+classifieds.commentAddingSubject = A new comment was added to an ad
