--- a/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/multilang/classifiedsBundle_fr.properties
+++ b/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/multilang/classifiedsBundle_fr.properties
@@ -21,9 +21,4 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Properties of comment
-# -------------------------
-AdminAllowedToUpdate = true
-
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/
-customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/
+classifieds.commentAddingSubject = Un commentaire a \u00e9t\u00e9 ajout\u00e9 \u00e0 une annonce
